trying to get ell working

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>ScoBro Snips</title>
     <link rel="stylesheet" href="Styles/homeStyle.css">
     <link rel="stylesheet" href="Styles/rightPanelStyle.css">
+    <script src="eel.js"></script> <!-- Ensure eel.js is in the root project directory -->
 </head>
 <body>
     <!-- Title bar outside the main container -->
@@ -35,8 +36,7 @@
         </div>
 
         <!-- Main content area -->
-        <!-- Main content area (light gray) -->
-        <div class="content"></div>
+        <div class="content" id="mainContent"></div>
 
         <!-- Right Panel for Tools -->
         <div class="right-panel" id="rightPanel">
@@ -56,5 +56,6 @@
     <script src="Scripts/selectButton.js" type="module"></script>
     <script src="Scripts/main.js" type="module"></script>
     <script src="Scripts/rightPanel.js" type="module"></script>
+    <script src="Scripts/home.js" type="module"></script>
 </body>
 </html>
